--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,37 @@
     padding-right: 8%;
     font-size: 5.0rem;
   }
+
+.App {
+    display: flex;
+}
+
+.leftBtns {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+}
+
+.specials {
+    display: flex;
+}
+
+.numbers {
+    display: flex;
+    flex-direction: row; 
+    flex-wrap: wrap;
+
+}
+
+.operators {
+
+}
+
+.btn-cont {
+    width: 33%;
+    height: auto;
+}
+
+.zero {
+    width: 66%;
+}
