--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,8 @@
     display: flex;
 }
 
+
+
 .leftBtns {
     display: flex;
     flex-direction: column;
@@ -33,17 +35,24 @@
 
 .specials {
     display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
 .numbers {
     display: flex;
     flex-direction: row; 
     flex-wrap: wrap;
-
+    justify-content: space-around;
+    margin-left: 10px;
 }
 
 .operators {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 10px;
 }
 
 .btn-cont {
@@ -53,4 +62,17 @@
 
 .zero {
     width: 66%;
+}
+
+button {
+    height: 70px;
+    width: 70px;
+    border-radius: 100%;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.zero button {
+    width: 200px;
+    border-radius: 50px;
 }
